Bootstrap text-align fixed

--- a/site/module3_solution/CSS/styles.css
+++ b/site/module3_solution/CSS/styles.css
@@ -19,7 +19,6 @@ button {
 li.nav-item {
   font-size: 1.8em;
   font-weight: 500;
-  text-align: center;
   margin-top: 2px -15px 0px -15px;
 }
 .nav-link {
